# selfish

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  files.rs  init.rs  main.rs  outcome.rs  print.rs  schedule.rs  storage.rs  todo.rs
